CosmosDB vector store auto configuration changes
- Configurable BatchingStrategy via auto configuraiton
- Minor code cleanup